--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -32,20 +32,20 @@
 
 <div class="container-fluid">
     <div class="row">
+        {% for doc in docs %}
         <div class="col-2">
             <div class="card">
                 <div class="card-body">
-                    <a href="https://www.easybill.de/api/" target="_blank"><h5 class="card-title">EasyBill</h5></a>
-                    Status: <span class="badge text-bg-success">OK</span><br/>
-                    Type: Swagger<br/>
+                    <a href="{{doc.url}}" target="_blank"><h5 class="card-title">{{doc.name}}</h5></a>
+                    Status: <span class="badge text-bg-success">{{doc.status}}</span><br/>
+                    Type: {{doc.type}}<br/>
                     <small class="text-muted">Last updated 3 mins ago</small><br/><br/>
-                    <a href="https://www.easybill.de/api/" target="_blank" class="btn btn-primary">Open documentation</a>
+                    <a href="doc/{{doc.name|lower|urlescape}}/{{doc.id}}" class="btn btn-primary">Open documentation</a>
                 </div>
             </div>
 
         </div>
-
-
+        {% endfor %}
     </div>
 </div>
 
