--- a/resources/templates/doc.html
+++ b/resources/templates/doc.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body>
-<nav class="navbar navbar-expand-lg bg-light mb-5">
+<body style="overflow: hidden">
+<nav class="navbar navbar-expand-lg bg-light mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
@@ -31,23 +31,14 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        {% for doc in docs %}
-        <div class="col-2">
-            <div class="card">
-                <div class="card-body">
-                    <a href="{{doc.url}}" target="_blank"><h5 class="card-title">{{doc.name}}</h5></a>
-                    Status: <span class="badge text-bg-success">{{doc.status}}</span><br/>
-                    Type: {{doc.type}}<br/>
-                    <small class="text-muted">Last updated 3 mins ago</small><br/><br/>
-                    <a href="doc/{{doc.id}}" class="btn btn-primary">Open documentation</a>
-                </div>
-            </div>
-
+    <div class="row" >
+        <div class="col-xs-12 col-sm-12 col-md-12" style="padding:0px">
+            <iframe src="/proxy/{{doc.id}}" style="width: 100vw;height: 95vh;overflow: scroll"></iframe>
         </div>
-        {% endfor %}
     </div>
 </div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
