--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body>
-<nav class="navbar navbar-expand-lg bg-light mb-5">
+<body style="overflow: hidden">
+<nav class="navbar navbar-expand-lg bg-light mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
@@ -23,36 +23,18 @@
 
             <ul class="navbar-nav float-end">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Config</a>
+                    <a class="nav-link active" aria-current="page" href="/config">Config</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div class="row">
-        {% for doc in docs %}
-        <div class="col-2">
-            <div class="card">
-                <div class="card-body">
-                    <a href="{{doc.url}}" target="_blank"><h5 class="card-title">{{doc.name}}</h5></a>
-                    Status: <span class="badge text-bg-success">{{doc.status}}</span><br/>
-                    Type: {{doc.type}}<br/>
-                    <small class="text-muted">Last updated 3 mins ago</small><br/><br/>
-                    <a href="doc/{{doc.id}}" class="btn btn-primary">Open documentation</a>
-                </div>
-            </div>
-
-        </div>
-        {% endfor %}
-    </div>
-</div>
-
+{% block body %}
+{% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-
 
 </body>
