--- a/resources/templates/doc.html
+++ b/resources/templates/doc.html
@@ -1,49 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Beholder</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-</head>
-<body style="overflow: hidden">
-<nav class="navbar navbar-expand-lg bg-light mb-0">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-            <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
-            Beholder
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <form class="d-flex" role="search">
-                <input class="form-control form-control-lg me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-
-            <ul class="navbar-nav float-end">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Config</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+{% extends "templates/base.html" %}
+{% block body %}
 <div class="container-fluid">
-    <div class="row" >
+    <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12" style="padding:0px">
             <iframe src="/proxy/{{doc.id}}" style="width: 100vw;height: 95vh;overflow: scroll"></iframe>
         </div>
     </div>
 </div>
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-
-
-</body>
+{% endblock %}
