--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body style="overflow: hidden">
+<body>
 <nav class="navbar navbar-expand-lg bg-light mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
