--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -2,13 +2,15 @@
 {% block body %}
 <div class="container-fluid mt-3">
     <div class="row">
-        {% for doc in docs %}
+        {% for service in services %}
         <div class="col-2">
             <div class="card">
                 <div class="card-body">
-                    <a href="{{doc.url}}" target="_blank"><h5 class="card-title">{{doc.name}}</h5></a>
-                    Status: <span class="badge text-bg-success">{{doc.status}}</span><br/>
-                    Type: {{doc.type}}<br/>
+                    <a href="{{doc.url}}" target="_blank"><h5 class="card-title">{{service.name}}</h5></a>
+                    Labels: <span class="badge text-bg-success">{{service.labels}}</span><br/>
+                    Url: <span class="badge text-bg-success">{{service.url}}</span><br/>
+                    Port: <span class="badge text-bg-success">{{service.port}}</span><br/>
+                    Ip: <span class="badge text-bg-success">{{service.ip}}</span><br/>
                     <small class="text-muted">Last updated 3 mins ago</small><br/><br/>
                     <a href="doc/{{doc.id}}" class="btn btn-primary">Open documentation</a>
                 </div>
