--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -6,6 +6,7 @@
     <title>Beholder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-light mb-0">
