--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -5,7 +5,7 @@
         {% for service in services %}
         <div class="col-2">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body shadow-sm">
                     <h5 class="card-title">{{service.name}}</h5>
                     Labels: <span class="badge text-bg-success">{{service.labels}}</span><br/>
                     Url: <span class="badge text-bg-success">{{service.url}}</span><br/>
