--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/beholder.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-light mb-0">
+<nav class="navbar navbar-expand-lg bg-light shadow-sm mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
