--- a/resources/templates/config.html
+++ b/resources/templates/config.html
@@ -1,9 +1,36 @@
 {% extends "templates/base.html" %}
 {% block body %}
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12" style="padding:0px">
-            xxxx
+    <div class="row justify-content-md-center">
+        <div class="col col-5">
+            <div class="card p-5 mt-5 shadow">
+                <form method="post" action="/config">
+                    <div class="mb-3">
+                        <label for="namespaces" class="form-label">Namespaces to scan</label>
+                        <input type="text" class="form-control" name="namespaces" id="namespaces" aria-describedby="namespacesHelp" value="{{namespaces}}">
+                        <div id="namespacesHelp" class="form-text">List of coma separated namespaces to be search for
+                            documentation. When empty "default" will be used.
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="openApiLabel" class="form-label">OpenAPI label</label>
+                        <input type="text" class="form-control" name="openApiLabel" id="openApiLabel" aria-describedby="openApiLabelHelp" value="{{openApiLabel}}">
+                        <div id="openApiLabelHelp" class="form-text">Marker label identifying service as exposing
+                            OpenAPI doc.
+                            When empty "openapi" will be used.
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="openApiPath" class="form-label">OpenAPI doc default path</label>
+                        <input type="text" class="form-control" name="openApiPath" id="openApiPath" aria-describedby="openApiPathHelp" value="{{openApiPath}}">
+                        <div id="openApiPathHelp" class="form-text">Path under which OpenAPI doc is exposed by
+                            service.
+                            When empty "/api/openapi.doc" will be used.
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Update</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
