--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -7,7 +7,7 @@
             <div class="card shadow-sm">
                 <h5 class="card-header clearfix">
                     <span class="title">{{service.name}}</span>
-                    <a href="" class="float-end" title="edit"><i class="bi bi-tools"></i></a>
+                    <a href="/service/{{service.id}}/config" class="float-end" title="edit"><i class="bi bi-tools"></i></a>
                 </h5>
                 <div class="card-body">
                     <span class="badge text-bg-success">{{service.labels}}</span>
