--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beholder</title>
+    <!--
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
+    -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="/static/css/beholder.css">
+    <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-light shadow-sm mb-0">
@@ -35,8 +42,10 @@
 {% block body %}
 {% endblock %}
 
+<script src="/static/js/bootstrap.bundle.min.js"></script>
+<!--
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-
+-->
 </body>
