config path and test call

--- a/resources/templates/beholder-config.html
+++ b/resources/templates/beholder-config.html
@@ -36,7 +36,7 @@
                                aria-describedby="openApiPathHelp" value="{{data.openApiPath}}">
                         <div id="openApiPathHelp" class="form-text">Path under which OpenAPI doc is exposed by
                             service.
-                            When empty "/api/openapi.yml" will be used. Only .yml files are supported.
+                            When empty "api/openapi.yml" will be used. Only .yml files are supported.
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Update</button>
