--- a/resources/templates/service-config.html
+++ b/resources/templates/service-config.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-md-center">
         <div class="col col-5">
 
-            {% if status = :success %}
+            {% if status = "success" %}
             <div class="alert alert-success mt-5" role="alert">
                 Configuration updated successfully.
             </div>
@@ -22,6 +22,11 @@
                             Path under which OpenAPI doc is exposed by {{service.name}} service.
                             When empty value from <a href="/config">global configuration</a> will be used.
                         </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="team" class="form-label">Current OpenAPI URL</label>
+                        <input disabled type="text" class="form-control" aria-describedby="teamHelp" value="{{api-doc-url}}">
+                        <div>{{docs}}</div>
                     </div>
                     <div class="mb-3">
                         <label for="repo" class="form-label">OpenAPI file status</label>
