Swagger doc - json file

--- a/resources/templates/swagger-ui.html
+++ b/resources/templates/swagger-ui.html
@@ -10,7 +10,7 @@
 <script>
 window.onload = function() {
   const ui = SwaggerUIBundle({
-    url: "/proxy/{{id}}/swagger",
+    url: "/service/{{id}}/openapi",
     dom_id: '#swagger-ui',
     supportedSubmitMethods: [],
     presets: [
