--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -4,10 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beholder</title>
-    <!--
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
@@ -24,15 +20,9 @@
             Beholder
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <form class="d-flex" role="search">
-                <input class="form-control form-control-lg me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-
-            <ul class="navbar-nav float-end">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/config">Config</a>
+            <ul class="navbar-nav" style="width:100%">
+                <li class="nav-item" style="width:100%">
+                    <a class="nav-link active float-end" aria-current="page" href="/config">Config</a>
                 </li>
             </ul>
         </div>
@@ -43,9 +33,4 @@
 {% endblock %}
 
 <script src="/static/js/bootstrap.bundle.min.js"></script>
-<!--
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
--->
 </body>
